PMSD-2479: Added getEnvelope screen

--- a/LRAtsSDKSample/app/src/main/res/values/colors.xml
+++ b/LRAtsSDKSample/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lrColor">#32DB86</color>
 </resources>
