--- a/LRAtsSDKSample/app/src/main/res/values/themes.xml
+++ b/LRAtsSDKSample/app/src/main/res/values/themes.xml
@@ -1,9 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.LRAtsSDKSample" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/lrColor</item>
+        <item name="colorSecondary">@color/black</item>
+        <item name="colorPrimaryDark">@color/lrColor</item>
+        <item name="android:buttonStyle">@style/lrButton</item>
     </style>
 
     <style name="Theme.LRAtsSDKSample" parent="Base.Theme.LRAtsSDKSample" />
+
+    <style name="lrButton" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
