--- a/LRAtsSDKSample/app/src/main/res/layout/fragment_get_envelope.xml
+++ b/LRAtsSDKSample/app/src/main/res/layout/fragment_get_envelope.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".sample.GetEnvelopeFragment">
+    tools:context=".examples.GetEnvelopeFragment">
     <TextView
         android:id="@+id/tvAppId"
         app:layout_constraintStart_toStartOf="parent"
