--- a/LRAtsSDKSample/app/src/main/res/values/themes.xml
+++ b/LRAtsSDKSample/app/src/main/res/values/themes.xml
@@ -2,9 +2,10 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.LRAtsSDKSample" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/lrColor</item>
-        <item name="colorSecondary">@color/black</item>
+        <item name="colorSecondary">@color/secondaryColor</item>
         <item name="colorPrimaryDark">@color/lrColor</item>
         <item name="android:buttonStyle">@style/lrButton</item>
+        <item name="background">@color/primaryColor</item>
     </style>
 
     <style name="Theme.LRAtsSDKSample" parent="Base.Theme.LRAtsSDKSample" />
