--- a/LRAtsSDKSample/app/src/main/res/layout/fragment_get_envelope.xml
+++ b/LRAtsSDKSample/app/src/main/res/layout/fragment_get_envelope.xml
@@ -1,69 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/primaryColor"
     tools:context=".examples.GetEnvelopeFragment">
+
     <TextView
         android:id="@+id/tvAppId"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "@string/app_id_label"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/app_id_label"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:id="@+id/etAppId"
-        app:layout_constraintTop_toBottomOf="@id/tvAppId"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/border_background"
+        android:paddingLeft="8dp"
         android:text="@string/app_id_example"
-        android:textAlignment="center"
-        />
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintTop_toBottomOf="@id/tvAppId" />
+
     <Button
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/etAppId"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/btnGetEnvelope"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/get_envelope_label"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:text="@string/get_envelope_label"
         android:textColor="@color/black"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etAppId" />
+
     <TextView
-        app:layout_constraintTop_toBottomOf="@id/btnGetEnvelope"
         android:id="@+id/tvEnvelopesLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/envelopes_label"/>
+        android:text="@string/envelopes_label"
+        app:layout_constraintTop_toBottomOf="@id/btnGetEnvelope" />
+
     <ScrollView
-        app:layout_constraintTop_toBottomOf="@id/tvEnvelopesLabel"
+        android:id="@+id/swEnvelope"
         android:layout_width="match_parent"
         android:layout_height="118dp"
-        android:background="@drawable/border_background"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        >
+        android:background="@drawable/border_background"
+        app:layout_constraintTop_toBottomOf="@id/tvEnvelopesLabel">
+
         <TextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:id="@+id/tvEnvelopes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/secondaryColor" />
     </ScrollView>
+
+    <TextView
+        android:id="@+id/tvLogsLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/log_label"
+        app:layout_constraintTop_toBottomOf="@id/swEnvelope" />
+
+    <TextView
+        android:id="@+id/tvLogs"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/border_background"
+        android:padding="8dp"
+        android:scrollbars="vertical"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/secondaryColor"
+        android:textSize="12sp"
+        android:typeface="monospace"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvLogsLabel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
