--- a/LRAtsSDKSample/app/src/main/res/values-night/themes.xml
+++ b/LRAtsSDKSample/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,10 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.LRAtsSDKSample" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/lrColor</item>
+        <item name="colorSecondary">@color/secondaryColor</item>
+        <item name="colorPrimaryDark">@color/lrColor</item>
+        <item name="android:buttonStyle">@style/lrButton</item>
+        <item name="background">@color/primaryColor</item>
     </style>
 </resources>
