--- a/LRAtsSDKSample/app/src/main/res/layout/fragment_get_envelope.xml
+++ b/LRAtsSDKSample/app/src/main/res/layout/fragment_get_envelope.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="@string/get_envelope_label"
-        android:textColor="@color/black"
+        android:textColor="@color/secondaryColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etAppId" />
