--- a/LRAtsSDKSample/app/src/main/res/layout/fragment_get_envelope.xml
+++ b/LRAtsSDKSample/app/src/main/res/layout/fragment_get_envelope.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="@string/app_id_label"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,6 +39,7 @@
         android:layout_marginEnd="32dp"
         android:text="@string/get_envelope_label"
         android:textColor="@color/secondaryColor"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etAppId" />
@@ -50,6 +52,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="32dp"
         android:text="@string/envelopes_label"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/btnGetEnvelope" />
 
     <ScrollView
@@ -80,6 +83,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="32dp"
         android:text="@string/log_label"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/swEnvelope" />
 
     <TextView
